--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
     /></a>
     <div class="col">
       <p>
-        Join the 12th Less Wrong Community Weekend (LWCW) in Berlin. This is the
-        world’s largest rationalist social gathering which brings together 250+
-        aspiring rationalists from across Europe and beyond for 4 days of
-        intellectual exploration, socialising and fun.
+        Join the 12th Less Wrong Community Weekend (LWCW) in Berlin. This is
+        one of the world’s largest rationalist social gathering which brings
+        together 250+ aspiring rationalists from across Europe and beyond for 4
+        days of intellectual exploration, socialising and fun.
       </p>
       <p>
         We will be taking over the whole hostel with a huge variety of spaces
