remove footer margin to better align vertically

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       .footer p {
         color: #718096;
         font-size: 0.95rem;
-        margin-bottom: 12px;
+        margin-bottom: 0;
       }
 
       .footer a {
