Cleanup HTML and CSS

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="main-content col">
+    <main class="col">
       <h1>LessWrong Community Weekend 2025</h1>
 
       <div class="hero-image">
@@ -48,9 +48,9 @@
           📣 Go to the official announcement
         </a>
       </div>
-    </div>
+    </main>
 
-    <footer class="footer">
+    <footer>
       <p>
         <span class="github-icon">🔧</span>
         <a
