--- a/screenshots/comparison.html
+++ b/screenshots/comparison.html
@@ -25,17 +25,23 @@
         max-width: 100%;
         height: auto;
       }
-    </style>
-  </head>
-  <body>
-    <div
-      style="
+
+      .main-grid {
         width: 100vw;
         display: grid;
         gap: 8px;
         grid-template-columns: auto 1fr 1fr;
-      "
-    >
+      }
+
+      .main-grid > * {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="main-grid">
       <div>Size</div>
       <div><pre>main</pre></div>
       <div><pre>branch</pre></div>
