--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <main class="col">
+    <main>
       <h1>LessWrong Community Weekend 2025</h1>
 
       <div class="hero-image">
@@ -22,7 +22,7 @@
         /></a>
       </div>
 
-      <div class="description col">
+      <div class="description">
         <p>
           Join us for the 12th LessWrong Community Weekend (LWCW) in Berlin!
           This is one of the world's largest rationalist gatherings, bringing
